# LLM-HSR

./: .dockerignore  .gitignore  Dockerfile  README.md  data.yaml  docker-compose.yaml  hoge.ipynb  pyproject.toml  recommend.py  record_audio.py  results.txt  search.ipynb  txt2voice.py
modules/: find_books.py  flow.py  interaction.py  recommender.py  record_audio.py  txt2voice.py
modules/llm/: find_books.py  interaction.py  recommender.py  record_audio.py  txt2voice.py
modules/robot/: controller.py  detic.py  find_books.py
